--- a/Module5/3-AngularComponentTemplate/hackernews/src/app/app.component.html
+++ b/Module5/3-AngularComponentTemplate/hackernews/src/app/app.component.html
@@ -9,6 +9,8 @@
 <h2>Here are some links to help you start: </h2>
 <h2>Today's article</h2>
 <hr>
+<app-count-down [seconds]="'undefined'" (finish)="finishCountDown()"></app-count-down>
+<h3>{{isCountDown}}</h3>
 <div *ngFor="let art of articles">
   <a href="{{art.url}}" target="_blank">{{art.title}}</a> |
   <app-likes></app-likes><br><br>
